--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.2",
   "description": "eBay typescript API",
   "main": "./dist/index.js",
-  "types": "index.d.ts",
+  "types": "./dist/index.d.js",
   "dependencies": {
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.1.2",
