--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "author": "Daniil Tomilow",
   "version": "0.0.3",
   "description": "eBay typescript API",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.js",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.js",
   "dependencies": {
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.1.2",
@@ -14,19 +14,22 @@
     "xml2json-light": "^1.0.6"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.3",
     "@types/debug": "^4.1.5",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.4",
     "@types/qs": "^6.5.3",
     "@types/xml2json": "^0.11.0",
     "chai": "^3.5.0",
     "mocha": "^6.2.0",
-    "ts-node-dev": "^1.0.0-pre.42",
+    "ts-node": "^8.4.1",
     "tslint": "^5.19.0",
     "typescript": "^3.6.2"
   },
   "scripts": {
     "build": "tsc",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "test": "mocha -r ts-node/register test/**/*.spec.ts --reporter=dot"
   },
   "repository": {
     "type": "git",
