--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.4",
     "@types/qs": "^6.5.3",
+    "@types/sinon": "^7.0.13",
     "@types/xml2json": "^0.11.0",
     "chai": "^3.5.0",
     "mocha": "^6.2.0",
+    "sinon": "^7.4.2",
     "ts-node": "^8.4.1",
     "tslint": "^5.19.0",
     "typescript": "^3.6.2"
