Update test, readme and examples.

--- a/package.json
+++ b/package.json
@@ -38,10 +38,57 @@
     "url": "git+ssh://git@github.com/hendtling/ebay-api.git"
   },
   "keywords": [
-    "ebay",
     "api",
-    "ts",
-    "typescript"
+    "eBay",
+    "Shopping",
+    "Searching",
+    "products",
+    "Browse",
+    "Category",
+    "FindingApi",
+    "node-api",
+    "eBay Traditional API",
+    "eBay Full API",
+    "eBay Account API",
+    "eBay Inventory API",
+    "eBay Compliance API",
+    "eBay Marketing API",
+    "eBay Fulfillment API",
+    "eBay Marketing API",
+    "eBay Analytics API",
+    "eBay Metadata API",
+    "eBay Browse API",
+    "eBay Feed API",
+    "eBay Order API",
+    "eBay Marketplace Insights API",
+    "eBay Taxonomy API",
+    "eBay Catalog API",
+    "eBay Translation API",
+    "eBay Analytics API",
+    "eBay Finding API",
+    "eBay Shopping API",
+    "eBay Merchandising API",
+    "eBay Trading API",
+    "eBay Product Services",
+    "eBay Client Alerts API",
+    "ebay-node",
+    "eBay-node-api",
+    "eBay-node-client",
+    "eBay-typescript",
+    "eBay-await",
+    "eBay-async",
+    "eBay-promises",
+    "eBay-products",
+    "eBay-sellers",
+    "eBay-orders",
+    "eBay-finances",
+    "eBay-inventory",
+    "eBay-shipment",
+    "eBay-api",
+    "eBay-sdk",
+    "eBay-client",
+    "eBay-node-api",
+    "eBay-node"
   ],
   "license": "MIT",
   "bugs": {
