--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.js",
   "dependencies": {
-    "@hendt/xml2json": "^1.0.3",
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.1.2",
     "debug": "^2.1.1",
-    "object-to-xml": "^2.0.0",
+    "fast-xml-parser": "^3.13.0",
     "qs": "^6.8.0"
   },
   "devDependencies": {
