--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/sinon": "^7.0.13",
     "chai": "^3.5.0",
     "mocha": "^6.2.0",
+    "readline": "^1.3.0",
     "sinon": "^7.4.2",
     "ts-node": "^8.4.1",
     "tslint": "^5.19.0",
