--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@hendt/ebay-api",
   "author": "Daniil Tomilow",
   "version": "0.6.1",
-  "description": "eBay typescript API",
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.js",
+  "description": "eBay TypeScript API.",
+  "browser": "./lib/ebay-api.min.js",
+  "module": "./lib/ebay-api.esm.js",
+  "main": "./lib/ebay-api.common.js",
+  "types": "./lib/ebay-api.d.js",
   "dependencies": {
     "axios": "^0.19.0",
     "axios-rate-limit": "^1.1.2",
@@ -22,14 +24,20 @@
     "chai": "^3.5.0",
     "mocha": "^6.2.0",
     "readline": "^1.3.0",
+    "rollup": "^1.24.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-strip": "^1.2.2",
+    "rollup-plugin-terser": "^5.1.2",
     "sinon": "^7.4.2",
     "ts-node": "^8.4.1",
     "tslint": "^5.19.0",
     "typescript": "^3.6.2"
   },
   "scripts": {
-    "build": "tsc",
-    "prepare": "tsc && npm run test",
+    "build": "tsc && rollup -c",
+    "prepare": "npm run test && npm run build",
+    "preversion": "npm run prepare",
     "test": "mocha -r ts-node/register test/**/*.spec.ts --reporter=dot"
   },
   "repository": {
