--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "build": "tsc && rollup -c",
-    "prepare": "npm run test && npm run build npm run tslint",
+    "prepare": "npm run test && npm run build && npm run tslint",
     "preversion": "npm run prepare",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "mocha -r ts-node/register test/**/*.spec.ts --reporter=dot"
