breaking: add standard version #3
 * revert type changes
 * update dependencies
 * use ts export #4
 * use umd insteand of iife

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "./lib",
+    "outDir": "lib",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -16,9 +16,5 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "test"
-  ]
+  "include": ["src"]
 }
