--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.js",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "axios-rate-limit": "^1.1.2",
     "debug": "^2.1.1",
     "fast-xml-parser": "^3.13.0",
@@ -15,6 +15,9 @@
     "qs": "^6.8.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-strip": "^1.3.2",
     "@types/chai": "^4.2.3",
     "@types/debug": "^4.1.5",
     "@types/mocha": "^5.2.7",
@@ -23,24 +26,23 @@
     "@types/qs": "^6.5.3",
     "@types/sinon": "^7.0.13",
     "chai": "^3.5.0",
-    "mocha": "^6.2.0",
+    "mocha": "^7.1.1",
     "readline": "^1.3.0",
-    "rollup": "^1.24.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-strip": "^1.2.2",
-    "rollup-plugin-terser": "^5.1.3",
+    "rollup": "^2.0.6",
+    "rollup-plugin-terser": "^5.3.0",
     "sinon": "^7.4.2",
+    "standard-version": "^7.1.0",
     "ts-node": "^8.4.1",
-    "tslint": "^5.20.1",
-    "typescript": "^3.6.2"
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.0"
   },
   "scripts": {
     "build": "tsc && rollup -c",
-    "prepare": "npm run test && npm run build && npm run tslint",
-    "preversion": "npm run prepare",
+    "prepare": "npm run build",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "mocha -r ts-node/register test/**/*.spec.ts --reporter=dot"
+    "test": "mocha -r ts-node/register test/**/*.spec.ts --reporter=dot",
+    "prerelease": "npm run test && npm run build",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -106,5 +108,8 @@
   "homepage": "https://github.com/hendt/ebay-api#readme",
   "directories": {
     "test": "test"
+  },
+  "engines": {
+    "node": ">= 8.0.0"
   }
 }
