--- a/.versionrc.json
+++ b/.versionrc.json
@@ -6,6 +6,10 @@
   },
   "bumpFiles": [
     {
+      "filename": "package.json",
+      "type": "json"
+    },
+    {
       "filename": "README.md",
       "updater": "./scripts/update-readme-release.js"
     }
