feat(Sell): add missed api calls
 * improve oas spec test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "test"
+  ]
 }
