chore: adjust and improve enums
 * added missed enum
 * run tslint before release

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "prepare": "npm run build",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "mocha -r ts-node/register 'test/**/*.spec.ts' --reporter=dot",
-    "prerelease": "npm run test && npm run build",
+    "prerelease": "npm run tslint && npm run test && npm run build",
     "release": "standard-version"
   },
   "repository": {
