--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,10 @@
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-  "exclude": [
-    "test"
-  ]
+  "include": ["src"]
 }
