fix: add package-lock.json to bumbFiles

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -10,6 +10,10 @@
       "type": "json"
     },
     {
+      "filename": "package-lock.json",
+      "type": "json"
+    },
+    {
       "filename": "README.md",
       "updater": "./scripts/update-readme-release.js"
     }
