--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^3.5.0",
     "mocha": "^7.1.1",
     "readline": "^1.3.0",
+    "rimraf": "^3.0.2",
     "rollup": "^2.28.2",
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^7.4.2",
@@ -36,7 +37,7 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "build": "tsc && rollup -c",
+    "build": "rimraf lib && tsc && rollup -c",
     "prepare": "npm run build",
     "tslint": "tslint -c tslint.json '{src,test}/**/*.ts'",
     "test": "mocha -r ts-node/register 'test/**/*.spec.ts' --reporter=dot",
