--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "rimraf lib && tsc && rollup -c",
     "prepare": "npm run build",
+    "coverage": "codecov",
     "tslint": "tslint -c tslint.json '{src,test,examples}/**/*.ts'",
     "test": "mocha -r ts-node/register 'test/**/*.spec.ts' --reporter=dot",
     "report": "nyc npm run test",
