--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/qs": "^6.5.3",
     "@types/sinon": "^7.0.13",
     "chai": "^3.5.0",
+    "form-data": "^4.0.0",
     "mocha": "^7.1.1",
     "nyc": "^15.1.0",
     "readline": "^1.3.0",
