--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es5", "es6"],
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "module": "commonjs",
     "declaration": true,
     "moduleResolution": "node",
