--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "readline": "^1.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.28.2",
+    "rollup-plugin-strip-code": "^0.2.7",
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^7.4.2",
     "standard-version": "^9.0.0",
