--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ebay-api",
   "author": "Daniil Tomilow",
-  "version": "7.1.3",
+  "version": "8.0.0-RC.0",
   "description": "eBay API for Node and Browser",
   "type": "module",
   "main": "./lib/index.js",
