--- a/package.json
+++ b/package.json
@@ -82,12 +82,13 @@
     "report:summary": "c8 --reporter=lcov --reporter=text-summary npm run test",
     "prerelease": "npm run tslint && npm run test && npm run build",
     "release": "standard-version",
-    "rc": "npm run release -- --prerelease RC && git push --follow-tags origin next"
+    "rc": "npm run release -- --prerelease RC && git push --follow-tags origin next",
+    "gen-openai": "npx openapi-typescript \"specs/*.json\" --output src/types/restful/"
   },
   "dependencies": {
     "axios": "^1.2.1",
     "debug": "^4.3.4",
-    "fast-xml-parser": "^4.0.12",
+    "fast-xml-parser": "^4.2.5",
     "qs": "^6.11.0"
   },
   "devDependencies": {
@@ -106,6 +107,7 @@
     "chai": "^4.3.7",
     "form-data": "^4.0.0",
     "mocha": "^10.1.0",
+    "openapi-typescript": "^6.3.4",
     "readline": "^1.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^3.7.0",
