chore: use native auth header instead of axios "auth" config
 * let axios serialize form with URLSearchParams
 * preparation to move to native fetch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,8 @@
     "removeComments": true
   },
   "exclude": ["src/index.ts"],
-  "include": ["src"]
+  "include": ["src"],
+  "ts-node": {
+    "esm": true
+  }
 }
