feat!: upgrading several APIs to latest version
  BREAKING CHANGE: Removed methods getAlsoBoughtByProduct, getAlsoViewedByProduct from buy marketing API and suppressViolation from sell compliance API. Removed corresponding
  types AddCartItemInput, RemoveCartItemInput, UpdateCartItemInput, SuppressViolationRequest. These operations were deprecated by eBay and no longer available in updated API
  specs.

# Conflicts:
#	specs/sell_fulfillment_v1_oas3.json

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "prerelease": "npm run tslint && npm run test && npm run build",
     "release": "standard-version",
     "rc": "npm run release -- --prerelease RC && git push --follow-tags origin next",
+    "fetch-openapi": "node scripts/fetch-open-api.cjs",
     "gen-openapi": "npx openapi-typescript \"specs/*.json\" --output src/types/restful/"
   },
   "dependencies": {
